--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     
         <form action="https://formsubmit.co/08147d2f648d8fc2de441a0de0c93201" method="POST">
     
-            <input type="text" placeholder="name" class="box" name="name">
-            <input type="email" placeholder="email" class="box" name="email">
+            <input type="text" placeholder="name" class="box" name="NAme">
+            <input type="email" placeholder="email" class="box" name="Email">
             <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Your Message"></textarea>
 
             <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
