--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     
         <form action="https://formsubmit.co/08147d2f648d8fc2de441a0de0c93201" method="POST">
     
-            <input type="text" placeholder="name" class="box" name="NAme">
+            <input type="text" placeholder="name" class="box" name="Name">
             <input type="email" placeholder="email" class="box" name="Email">
             <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Your Message"></textarea>
 
