--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
         </div>
     
         <form action="https://formsubmit.co/08147d2f648d8fc2de441a0de0c93201" method="POST">
+                      <!-- Honeypot -->
+          <input type="text" name="_honey" style="display: none;">
+
+          <!-- Disable Captcha -->
+          <input type="hidden" name="_captcha" value="false">
     
             <input type="text" placeholder="name" class="box" name="Name">
             <input type="email" placeholder="email" class="box" name="Email">
