--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 
           <!-- Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
+            
+             <input type="hidden" name="_next" value="https://haydn5.github.io/formsubmitdemo/success.html" >
     
             <input type="text" placeholder="name" class="box" name="Name">
             <input type="email" placeholder="email" class="box" name="Email">
