--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <!-- Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
             
-             <input type="hidden" name="_next" value="https://haydn5.github.io/formsubmitdemo/success.html" >
+             <input type="hidden" name="_next" value="https://worrod10.github.io/w-aldmmaeen/done.html" >
     
             <input type="text" placeholder="name" class="box" name="Name">
             <input type="email" placeholder="email" class="box" name="Email">
