--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             
              <input type="hidden" name="_next" value="https://worrod10.github.io/w-aldmmaeen/done.html" >
     
-            <input type="text" placeholder="name" class="box" name="Name">
-            <input type="email" placeholder="email" class="box" name="Email">
-            <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Your Message"></textarea>
+            <input type="text" placeholder="name" class="box" name="Name" required>
+            <input type="email" placeholder="email" class="box" name="Email" required>
+            <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Your Message" required></textarea>
 
             <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
             <a href="" target="_blank"><button class="btn">Downloed CV <i class="fas fa-download"></i></button></a> 
