--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Your Message" required></textarea>
 
             <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
-            <a href="" target="_blank"><button class="btn">Downloed CV <i class="fas fa-download"></i></button></a> 
+            <a href="file:///C:/Users/worod/OneDrive/Desktop/worod%20al%20dmmeen.pdf" target="_blank"><button class="btn">Downloed CV <i class="fas fa-download"></i></button></a> 
     
         </form>
     
