--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
                 <div class="box">
                     <a href="https://worodsaeed1.medium.com/" target="_blank"> <span> UX/UI </span></a>
                     <br>
-                     <a href="https://worodsaeed1.medium.com/">With Misk Academy </a>
+                     <a href="https://worodsaeed1.medium.com/">2021 | Misk Academy </a>
                 </div>
 
                 <div class="box">
                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> <span> React Native </span></a>
                     <br>
-                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> With TVTC </a>
+                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> 2020 | TVTC </a>
                 </div>
 
                 <div class="box">
                     <a href= > <span> Excal Program </span></a>
                     <br>
-                     <a href=> With Rwaq </a>
+                     <a href=> 2020 | Rwaq </a>
                 </div>
 
 
                 
                 <div class="box">
                     <span> Valid Membership  </span>
-                    <h3>With Eng.Council</h3>
+                    <h3>2021 | Eng.Council</h3>
                 </div>
              </div>
         </div>
@@ -109,13 +109,13 @@
 
             <div class="box">
                 <i class="fas fa-user-check"></i>
-                <span>Naqel Express| Present</span>
-                <h3>CUSTOMER SERVICE AGENT</h3>
+                <span>Customer Service Agent </span>
+                <h3>Naqel Express| Present </h3>
                 <p>
                     - Confirm booking with line/agent/vendors on confirmed rates.<br>
                     - Get a booking schedule.<br>
                     - Update customers daily basis.<br>
-                    - Follow up on clearance with agent/ our operations team.<br>
+                    - Follow up on clearance with agent/ operations team.<br>
                     - Keep tracking until shipment deliver and update customer<br>
                     - If any additional cost occurs update pricing and customer</p>
             </div>
