--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
                 <div class="box">
                     <a href="https://worodsaeed1.medium.com/" target="_blank"> <span> UX/UI </span></a>
                     <br>
-                     <a href="https://worodsaeed1.medium.com/">2021 | Misk Academy </a>
+                     <a href="https://worodsaeed1.medium.com/"> Misk Academy | 2021 </a>
                 </div>
 
                 <div class="box">
                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> <span> React Native </span></a>
                     <br>
-                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> 2020 | TVTC </a>
+                     <a href=https://api.mnar.sa/certificate/kNnrDRpZhcNUXeCADd72Gd target="_blank"> TVTC | 2020 </a>
                 </div>
 
                 <div class="box">
                     <a href= > <span> Excal Program </span></a>
                     <br>
-                     <a href=> 2020 | Rwaq </a>
+                     <a href=> Rwaq | 2020 </a>
                 </div>
 
 
                 
                 <div class="box">
                     <span> Valid Membership  </span>
-                    <h3>2021 | Eng.Council</h3>
+                    <h3> Eng.Council | 2021</h3>
                 </div>
              </div>
         </div>
