--- a/done.html
+++ b/done.html
@@ -16,7 +16,7 @@
         <h1>I <span>Will get back to you soon...</span></h1>
         
             <form>
-        <input type="button" value="Go back!" onclick="history.back()">
+        <input type="button" value="Go back!" onclick="history.back()" style="text-decoration: none;">
        </form> 
 
 
